# ChangeLog for mail-client/trojita
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/ChangeLog,v 1.7 2010/11/12 15:33:02 scarabeus Exp $

  12 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> trojita-9999.ebuild:
  Drop now not required virtualx eclass.

  12 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> trojita-9999.ebuild:
  Update ebuild to reflect tests change. Fix license specification. Per jkt's
  request.

*trojita-0.2 (04 Aug 2010)

  04 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org> +trojita-0.2.ebuild:
  Version bump.

  06 Jun 2010; Lars Wendler <polynomial-c@gentoo.org> trojita-9999.ebuild:
  Added qt-sql dependency (proxy commit for jkt)

  17 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org> trojita-9999.ebuild:
  Commit jkt's change for the build sytem.

  06 Sep 2009; Alex Alexander <wired@gentoo.org> trojita-9999.ebuild:
  fixed typo in RDEPEND

  05 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> +trojita-9999.ebuild,
  +metadata.xml:
  Move from net-mail to mail-client.

*trojita-9999 (05 Sep 2009)

  05 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> +trojita-9999.ebuild,
  +metadata.xml:
  Initial commit. I am proxying it for jkt. All credit for ebuild goes for
  him. Per bug #283372.
