@@ -1,5 +1,5 @@
-DIST trojita-0.2.tar.bz2 171538 RMD160 2f9ea38920fd7b45ee06fbd9f14b970cd96bb60f SHA1 1c409e87317077613041a37ec966bd8d08c7a023 SHA256 a9d02b5f3c5b7dd8c9bc582df65444fc9e03b4b5ba80559e6eb6b0d263f2cd35
-EBUILD trojita-0.2.ebuild 656 RMD160 c7351d7df40470c9d9901fccde591631860e854d SHA1 138605b4e7e561668b85818c9d272ff1e7a33550 SHA256 9b7e5012605494cea639a793cb51b6e048747677f609ac6dad4617d4aa1d4598
-EBUILD trojita-9999.ebuild 723 RMD160 5a8a3bdfbd50c8484720d03ea65b3f5458b85b98 SHA1 f367d2f537fd7f65742754b51c7caecdfa006435 SHA256 d506b149d82d1da50ad2a2280b903aaf38a4abeadf7034dc3da59eacb31d9c96
-MISC ChangeLog 1314 RMD160 620411c6a62e1ab0e793da32b578c0913c0c6b2b SHA1 2f9f41aef68797255f3ba0a4621d912ed8ea9aa9 SHA256 fad758fae23a6533a5766ca3020af8145ff8992846c610467b717f8ab57b5a9d
+DIST trojita-0.2.9.tar.bz2 218176 RMD160 88c4c30890a1efb23297ab64104f45d348385aa6 SHA1 041f32518a7e2382f9f8da3078fd378cd4fa2fed SHA256 025264fb68a89ba6d0ae45eece4e51dd44d0e0fc5358cfec1412a642158471bc
+EBUILD trojita-0.2.9.ebuild 853 RMD160 e94c8f88da7fe27b2a2e9b798370b8b5191f58ad SHA1 5913b4b62a025ea3b110458d14bab72490cd2519 SHA256 31fbed140afa8c54ebdab92a8abe85c1cfc2feec56dbccf12a1ba6f069e2955a
+EBUILD trojita-9999.ebuild 852 RMD160 02229b98279b53e55d3432c445e739c5670446cd SHA1 c93c097f198bfefaee94d109e500983c79499844 SHA256 0837dd5e60d85f408837c614dbc88031ddda0bb5bc7351e2f02f70226db89227
+MISC ChangeLog 1536 RMD160 d73c4941a4999a3cf754b1115425041b9d517ce1 SHA1 f48bd13faba02853fecac06aaae0423cc2a9cf4b SHA256 3092c1026a843a9b5b8bd152fde7518e14ccf74df8ed2f41258e99cf3b025441
 MISC metadata.xml 348 RMD160 c3353a4cc398f064a60ec6ccce11fd48158a5f41 SHA1 03c0ac372a0e8bc30e970f11d36cb381f5216d7e SHA256 c32e17648cfc226490e6bbd814f0fd60d3307cb27228de2be7efa1b340417be4
