@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/trojita-9999.ebuild,v 1.7 2011/01/11 22:11:33 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/Attic/trojita-0.2.9.ebuild,v 1.1 2011/01/11 22:11:33 scarabeus Exp $
 
 EAPI=3
 
