@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/trojita
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/ChangeLog,v 1.7 2010/11/12 15:33:02 scarabeus Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/ChangeLog,v 1.8 2011/01/11 22:11:33 scarabeus Exp $
+
+*trojita-0.2.9 (11 Jan 2011)
+
+  11 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> -trojita-0.2.ebuild,
+  +trojita-0.2.9.ebuild, trojita-9999.ebuild:
+  Version bump per bug #351396. Proxy commit for Jan Kundrát (jkt).
 
   12 Nov 2010; Tomáš Chvátal <scarabeus@gentoo.org> trojita-9999.ebuild:
   Drop now not required virtualx eclass.
